# ooi

./: .coveragerc  .gitreview  .mailmap  .testr.conf  .travis.yml  HACKING.rst  README.md  README.rst  SUMMARY.md  bandit.yaml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  developer.rst  index.rst  installation.rst  modules.rst  user.rst
doc/source/user/: configuration.rst  index.rst  installation.rst  upgrade.rst  usage.rst
doc/source/user/pipelines/: index.rst  juno.rst  kilo.rst  liberty.rst  mitaka.rst  newton.rst
etc/: api-paste-juno.ini.sample  api-paste-kilo.ini.sample  api-paste-liberty.ini.sample  ooi.conf.sample
ooi/: SUMMARY.md  __init__.py  config.py  exception.py  log.py  opts.py  service.py  utils.py  version.py
ooi/api/: __init__.py  base.py  compute.py  helpers.py  helpers_neutron.py  ip_reservation.py  network.py  network_link.py  query.py  securitygroup.py  securitygroup_link.py  storage.py  storage_link.py
ooi/api/networks/: helpers.py  network.py  parsers.py
ooi/cmd/: api.py
ooi/occi/: helpers.py  validator.py
ooi/occi/core/: action.py  attribute.py  category.py  collection.py  entity.py  kind.py  link.py  mixin.py  resource.py
ooi/occi/infrastructure/: compute.py  contextualization.py  ip_reservation.py  network.py  network_extend.py  network_link.py  securitygroup.py  securitygroup_link.py  storage.py  storage_link.py  templates.py
ooi/occi/parser/: headers.py
ooi/occi/rendering/: headers.py  occi_json.py  text.py  urilist.py
ooi/openstack/: __init__.py  contextualization.py  helpers.py  mixins.py  network.py  templates.py
ooi/tests/: base.py  fakes.py  fakes_network.py  fakes_neutron.py  test_base_controller.py  test_compute_controller.py  test_occi.py  test_occi_infrastructure.py  test_occi_middleware.py  test_ooi.py  test_openstack.py  test_parser.py  test_validator.py  test_wsgi.py
ooi/tests/controllers/: base.py  test_compute.py  test_helpers.py  test_network.py  test_network_links.py  test_neutron_helper.py  test_nova_net_helper.py  test_query.py  test_storage.py  test_storage_links.py
ooi/tests/functional/middleware/: test_compute_controller.py  test_ip_reservation_controller.py  test_middleware.py  test_netinterface_controller.py  test_network_controller.py  test_query_controller.py  test_storage_controller.py  test_storagelink_controller.py
ooi/tests/middleware/: test_compute_controller.py  test_functional_netinterface.py  test_functional_network.py  test_middleware.py  test_netinterface_controller.py  test_network_controller.py  test_query_controller.py  test_storage_controller.py  test_storagelink_controller.py
ooi/tests/occi/: test_occi_core.py  test_occi_infrastructure.py  test_openstack.py
ooi/tests/occi/renderings/: base.py  test_header.py  test_headers.py  test_json.py  test_text.py
ooi/tests/parsers/: base.py  test_header.py  test_json.py  test_text.py
ooi/tests/tests_networks/: fakes.py
ooi/tests/tests_networks/controllers/: test_helper.py  test_network.py  test_parser.py
ooi/tests/tests_networks/middleware/: test_middleware.py  test_network_controller.py
ooi/tests/tests_networks/wsgi/: test_wsgi.py
ooi/tests/unit/: test_parser.py  test_resource_exception_handler.py  test_validator.py  test_wsgi.py
ooi/tests/unit/controllers/: test_compute.py  test_helpers.py  test_ip_reservation.py  test_network.py  test_network_links.py  test_neutron_helper.py  test_nova_net_helper.py  test_query.py  test_security_group.py  test_securitygroup_link.py  test_storage.py  test_storage_links.py
ooi/tests/unit/occi/: test_occi_core.py  test_occi_infrastructure.py  test_openstack.py
ooi/tests/unit/occi/renderings/: base.py  test_header.py  (+2 more)
ooi/wsgi/: __init__.py  parsers.py  serializers.py  utils.py
