[metadata]
name = ooi
summary = OOI: OpenStack OCCI Interface
license = Apache-2
description-file =
    README.md
author = Spanish National Research Council
author-email =  ooi@lists.launchpad.net 
home-page = https://launchpad.net/ooi
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    ooi

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = ooi/locale
domain = ooi

[update_catalog]
domain = ooi
output_dir = ooi/locale
input_file = ooi/locale/ooi.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = ooi/locale/ooi.pot

[entry_points]
paste.filter_factory =
    ooi = ooi.wsgi:OCCIMiddleware.factory
